--- a/page 1.css
+++ b/page 1.css
@@ -4,7 +4,7 @@
     margin-right: auto;
     min-height: 100%;
     width: 100%;
-    background-image:url("img/Copy%20of%20Copy%20of%20IMG_20170420_211128.jpg");
+    background-image:url("Copy%20of%20Copy%20of%20IMG_20170420_211128.jpg");
     background-attachment: scroll;
     -webkit-background-size: cover;
     background-size: cover;
