--- a/app.css
+++ b/app.css
@@ -21,7 +21,7 @@
      *    IE on Windows Phone and in iOS.
      */
 html {
-  font-family: sans-serif;
+  font-family: 'prenton-display', sans-serif;
   /* 1 */
   line-height: 1.15;
   /* 2 */
